# bitrix24-mcp

./: LICENSE  README.md  main.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature_request.md  thank_kartochka_team.md
app/: config.py
app/application/services/: __init__.py  contact.py  deal.py
app/domain/entities/: base_entity.py  contact.py  deal.py  smart_process.py
app/domain/interfaces/: base_repository.py
app/infrastructure/: ioc.py
app/infrastructure/bitrix/: bitrix_contact_repository.py  bitrix_deal_repository.py  repository_factory.py
app/infrastructure/bitrix/mixins/: __init__.py  base.py  batch_operations.py  filter_builder.py  pagination.py  read.py  relationship.py  write.py
app/infrastructure/logging/: __init__.py  logger.py
app/infrastructure/mcp/: server.py
app/infrastructure/mcp/handlers/: contact.py  deal.py
app/presentation/: mcp.py
docs/source/: conf.py  index.rst  installation.rst  quickstart.rst
docs/source/modules/application/: index.rst  services.rst
docs/source/modules/domain/: bitrix_types.rst  entities.rst  index.rst  interfaces.rst
docs/source/modules/infrastructure/: bitrix.rst  index.rst  ioc.rst  logging.rst  mcp.rst
docs/source/modules/presentation/: index.rst  mcp.rst
src/: __init__.py  config.py  container.py
src/application/: __init__.py
src/application/services/: __init__.py  contact.py  deal.py
src/domain/: __init__.py  bitrix_types.py
src/domain/entities/: __init__.py  base_entity.py  contact.py  deal.py  smart_process.py
src/domain/interfaces/: __init__.py  base_repository.py
src/infrastructure/: __init__.py  ioc.py
src/infrastructure/bitrix/: __init__.py  bitrix_contact_repository.py  bitrix_deal_repository.py  repository_factory.py
src/infrastructure/bitrix/mixins/: __init__.py  base.py  batch_operations.py  filter_builder.py  pagination.py  read.py  relationship.py  write.py
src/infrastructure/logging/: __init__.py  logger.py
src/infrastructure/mcp/: server.py
src/infrastructure/mcp/handlers/: __init__.py  contact.py  deal.py
src/presentation/: mcp.py
tests/: services.py
