[project]
name = "mcp-server-b24"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fast-bitrix24>=1.8.4",
  "mcp[cli]>=1.4.1",
  "pydantic>=2.10.6",
  "pydantic-settings>=2.8.1",
  "ruff>=0.11.0",
  "structlog>=25.2.0",
  "wireup>=0.16.0",
]

[project.scripts]
mcp-server-b24 = "app.presentation.mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"
fix = true
unsafe-fixes = false
cache-dir = "~/.cache/ruff"

[tool.ruff.format]
quote-style = "single"
line-ending = "auto"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 20

[tool.ruff.lint]
select = ["ALL"]
exclude = ['tests/*']

ignore = [
  "D100",
  "D212",
  "D200",
  "ANN401",
  "TRY300",
  "TRY003",
  "FBT001",
  "FBT002",
  "FBT003",
  "ARG002",
  "D106",
  "BLE001",
  "D107",
  "D205",

  "EM102",
  "RUF001",
  "RUF002",
  "RUF012",

  "S101",
  "B008",

  "INP001",
  "UP008",

  "RET505",
]

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[dependency-groups]
dev = ["ruff>=0.11.0"]
